--- a/.htaccess
+++ b/.htaccess
@@ -60,9 +60,9 @@
 </IfModule>
 ##### Optimize default expiration time - END
 
-##### 1 Month for most static resources
+##### 1 Year for most static resources (updated from 1 month for SEO)
 <filesMatch ".(css|jpg|jpeg|png|webp|gif|js|ico|woff|woff2|eot|ttf)$">
-  Header set Cache-Control "max-age=2592000, public"
+  Header set Cache-Control "max-age=31536000, public"
 </filesMatch>
 
 ##### Enable gzip compression for resources
