--- a/.htaccess
+++ b/.htaccess
@@ -60,11 +60,6 @@
 </IfModule>
 ##### Optimize default expiration time - END
 
-##### 1 Month for most static resources
-<filesMatch ".(css|jpg|jpeg|png|webp|svg|gif|js|ico|woff|woff2|eot|ttf)$">
-  Header set Cache-Control "public, max-age=2592000"
-</filesMatch>
-
 ##### Enable gzip compression for resources
 <ifModule mod_gzip.c>
   mod_gzip_on Yes
@@ -82,8 +77,12 @@
   SetOutputFilter DEFLATE
 </FilesMatch>
 
-##### Set Header Vary: Accept-Encoding
 <IfModule mod_headers.c>
+  ##### 1 Month for most static resources
+  <FilesMatch "\.(css|jpg|jpeg|png|webp|gif|js|ico|woff|woff2|eot|ttf)$">
+    Header set Cache-Control "max-age=2592000, public"
+  </FilesMatch>
+  ##### Set Header Vary: Accept-Encoding
   <FilesMatch ".(js|css|xml|gz|html)$">
     Header append Vary: Accept-Encoding
   </FilesMatch>
